<resources>
    <string name="app_name">magiPlex Film Rentals</string>

    <!-- Fragment name strings -->
    <string name="latest_films">Latest Films</string>
    <string name="all_films">All Films</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_purchases">My Purchases</string>
    <string name="my_settings">My Settings</string>
    <string name="title_activity_settings">My Settings</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">423008065125031</string>


    <!-- Button strings -->
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="share_film">Share film</string>
    <string name="film_details">Open film details</string>
    <string name="film_genre_filter">Genre</string>
    <string name="film_user_ratings_filter">User Ratings</string>
    <string name="film_certificate_filter">Certificate</string>

    <!-- Film data name strings -->
    <string name="film_title">Film Title</string>
    <string name="film_description">Film Description</string>
    <string name="film_genre">Genre</string>
    <string name="film_userrating">0.0</string>
    <string name="film_certificate">CT</string>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

</resources>