<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:adjustViewBounds="true"
    android:id="@+id/film_card_container">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="450dp"
        android:layout_margin="10dp"
        cardview:cardCornerRadius="10dp"
        android:background="@color/cardview_light_background"
        tools:context=".activities.LatestFilmsFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="3dp">

            <RelativeLayout
                android:id="@+id/filmContext"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:gravity="center">

                <ProgressBar
                    android:id="@+id/loadingCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:max="100"
                    android:progress="0"
                    android:secondaryProgress="0"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:indeterminate="true" />

                <ImageView
                    android:id="@+id/film_thumbnail_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/loading_frame"
                    android:scaleType="centerCrop" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="4sp">


                <ImageView
                    android:id="@+id/film_certificate_id"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="-35dp"
                    android:background="@drawable/shape_background" />


                <TextView
                    android:id="@+id/film_title_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:text="@string/film_title"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/film_genre_id"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="end"
                    android:text="@string/film_genre"
                    android:textColor="#000000"
                    android:textStyle="italic"
                    android:textSize="14sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="10"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true">

                    <Button
                        android:id="@+id/buttonRent"
                        android:layout_width="75dp"
                        android:layout_height="25dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/button_style"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/rent"
                        android:textColor="#fff"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/buttonBuy"
                        android:layout_width="75dp"
                        android:layout_height="25dp"
                        android:layout_marginBottom="4dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="4dp"
                        android:background="@drawable/button_style"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/buy"
                        android:textColor="#fff"
                        android:textSize="15sp" />


                    <ImageView
                        android:id="@+id/iconFavourite"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginStart="65dp"
                        android:src="@drawable/ic_star_border_24dp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>