<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.FilmDetailsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/filmDetail_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintBottom_toTopOf="@+id/nestedScrollView"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/filmDetail_collapsing_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimaryDark"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme"
                app:layout_collapseMode="pin" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/filmContext"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:gravity="center">

                    <ProgressBar
                        android:id="@+id/loadingCircle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:indeterminate="true"
                        android:max="100"
                        android:progress="0"
                        android:secondaryProgress="0" />

                    <ImageView
                        android:id="@+id/film_thumbnail_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/loading_frame"
                        android:scaleType="centerCrop" />

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:layout_marginTop="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/film_title_id"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:gravity="end"
                        android:text="@string/film_title"
                        android:textColor="#000000"
                        android:textSize="35sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/film_genre_id"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:gravity="end"
                        android:text="@string/film_genre"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:textStyle="italic" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="end"
                        android:layout_marginTop="15dp"
                        android:gravity="end">

                        <TextView
                            android:id="@+id/film_user_rating_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginEnd="15dp"
                            android:text="@string/film_userrating"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:textStyle="normal" />


                        <ImageView
                            android:id="@+id/film_certificate_id"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="end"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/shape_background"
                            android:foregroundGravity="center" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/film_description_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="415dp"
            android:gravity="end"
            android:text="@string/film_description"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="normal" />

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>